[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
arch = { path = "../arch" }
ksync = { path = "../ksync" }
domain_main = { path = "../domain_main" }
corelib = { path = "../corelib", features = ["core_impl"] }
task_meta = { path = "../task_meta" }
shared_heap = { path = "../shared_heap" }
io = { path = "../io" }

pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
memory_addr = { git = "https://github.com/os-module/memory_addr" }
int-enum = "1"
riscv = "0.11"
log = { version = "0", optional = true }
pconst = { git = "https://github.com/os-module/pconst.git", features = [
    "special_error",
] }
spin = "0"
unwinding = { git = "https://github.com/nbdd0121/unwinding", rev = "ff0e91b", default-features = false, features = [
    "unwinder",
    "fde-gnu-eh-frame-hdr",
    "panic",
    "personality",
] }
getrandom = "0.3.1"

[features]
default = ["log"]
log = ["dep:log"]
task = []
